[package]
name = "axs5106l"
version = "0.1.0"
description = "A no_std Rust driver for the AXS5106L capacitive touch controller"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/toto04/axs5106l"
keywords = [
  "embedded",
  "driver",
  "touchscreen",
  "capacitive",
  "no_std",
  "embedded-hal",
  "axs5106l",
  "i2c",
  "esp32",
  "esp32-c6",
]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = "1.0"
nb = "1.1"
heapless = "0.9.1"
